[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "snap-lut"
version = "0.1.0"
description = "Pythagorean triple snap lookup table generator for FPGA BRAM"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.9"
authors = [
    {name = "Casey Digennaro"},
]
keywords = ["fpga", "bram", "lookup-table", "pythagorean", "fixed-point", "yosys"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Verilog",
    "Topic :: Scientific/Engineering :: Electronic Design Automation (EDA)",
]

[project.scripts]
snap-lut-generate = "generate_snap_table:main"

[tool.setuptools]
py-modules = ["generate_snap_table"]
